# edth-copenhagen-drone-control

./: Cargo.toml  LICENSE  README.md  pyproject.toml  supervisor.py  token.txt
py-src/drone/: drone.py
src/: main.rs
