[package]
edition = "2021"
name = "hs-hackathon-drone-control"
description = "Copenhagen Defence Tech Hackathon 2025: Drone Challenge Starter Repo"
version = "0.1.0"
resolver = "2"

[dependencies]
eyre = "0.6.12"
nalgebra = "0.34.0"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
